# ADCS-lifecycle-demo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  ENGINEERING_LOOP.md  Makefile  README.md  RECONCILIATION.md  docker-compose.yml  jaxa_notebook.ipynb  main.py  notebook.py  pyproject.toml
.github/workflows/: ontology.yml
__marimo__/session/: notebook.py.json
analysis/: oracle.py
compute/: Dockerfile  __init__.py  base.py  container_entry.py  docker_compute.py  git_ref.py  local.py  organizations.py  reproduce.py
documents/: __init__.py  design_description.py
evidence/: binding.py  hashing.py
flexo/: README.md  init.sh  teardown.sh
interrogate/: explain.py  reproduce.py  rerun.py  visualize.py
ontology/: assembly_manifest.json  catalog-v001.xml  prefixes.py  robot-report-profile.txt  rtm-edit.ttl  rtm.ttl  rtm_individuals.ttl  rtm_shapes.ttl  sysml_term_map.csv
ontology/imports/: oslc-qm.ttl  oslc-rm.ttl
output/: index.html
pipeline/: dataset.py  plan.ttl  runner.py  stage0_assembly.py  stages.py  state.py
pipeline/backends/: __init__.py  base.py  flexo.py  fuseki.py  local.py  txnlog.py
scripts/: build_ontology.py  fetch_imports.py
structural/: parameters.ttl  satellite.ttl
tests/: test_attestation_gsn.py  test_audit.py  test_backends.py  test_cli.py  test_compute.py  test_design_description.py  test_docker_image_evidence.py  test_flexo_live.py  test_named_graphs.py  test_ontology_alignment.py  test_ontology_build.py  test_ontology_size.py  test_oracle.py  test_organizations.py  test_pipeline.py  test_plan_execution.py  test_reproduce.py  test_rerun.py  test_robot_validation.py  test_shape_suite.py  test_stage0_assembly.py  test_traceability.py  test_transaction_log.py  test_trust_queries.py  test_txnlog.py
tools/: start-services.sh  stop-services.sh
traceability/: attestation.py  audit.py  closure_assertion.py  oracle_assertion.py  plan_execution.py  queries.py  rtm.py  transaction_log.py  validation.py  verification.py
