[project]
name = "adcs-lifecycle-demo"
version = "0.1.0"
description = "ADCS lifecycle demo with bidirectional requirements traceability"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.0",
    "sympy>=1.12",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pydantic>=2.0",
    "graphviz>=0.20",
    "marimo>=0.22.5",
    "networkx>=3.6.1",
    "pyshacl>=0.31.0",
    "httpx>=0.28.1",
]

[project.scripts]
adcs-pipeline = "pipeline.runner:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
