[project]
name = "adcs-lifecycle-demo"
version = "0.1.0"
description = "ADCS lifecycle demo with bidirectional requirements traceability"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.0",
    "sympy>=1.12",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pydantic>=2.0",
    "graphviz>=0.20",
    "marimo>=0.22.5",
    "networkx>=3.6.1",
    "pyshacl>=0.31.0",
    "httpx>=0.28.1",
    "typer>=0.12,<1.0",  # CLI framework (Click + Rich transitive); WP1 §4.6
]

[project.scripts]
adcs-pipeline = "pipeline.runner:main"

[dependency-groups]
dev = [
    "marimo>=0.22.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # jupyterlab drives jaxa_notebook.ipynb (the JAXA-talk walkthrough) and
    # brings nbformat + nbconvert for headless execution / CI dry-runs.
    "jupyterlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Default pytest run skips opt-in marker groups. CI opts in explicitly:
#   uv run pytest -m live      — Flexo MMS round-trip
#   uv run pytest -m network   — W3C / external vocab fetches (reserved)
addopts = "-m 'not live and not network'"
markers = [
    "live: opt-in tests that talk to a live external service (Flexo MMS today; Fuseki later). Require credentials and network — skipped by default; opt in with `-m live`.",
    "network: opt-in tests that fetch from external resources (W3C vocabularies, GitHub raw content). Reserved — no tests today. Skipped by default; opt in with `-m network`.",
]
